Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96985

Video and MediaPlayer don't allow to use relative URLs

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.2.3, 6.2, 6.3.0 Beta1
    • 6.2.0
    • Multimedia
    • None
    • 8a3806f6263f56b5be5b557e321b9b13d1913d5f (qt/qtmultimedia/dev) b09502a9e27f312a92e35a799c50493a168e1696 (qt/qtmultimedia/6.2) 9d96fd9ee39ff51c15ca43399db5eadc471888c0 (qt/qtmultimedia/6.2.1) 08c51a63c3 (qt/qtmultimedia/6.2), d928939dc (dev)

      The QML Video and MediaPlayer do not allow to use relative URLs as follows:

      source: "test.mp4"
      

      The only way to make it work is by using either

      source: Qt.resolvedUrl("test.mp4")
      

      or

      source: "file:///path/to/test.mp4"
      

      The documentation doesn't mention anything about it and all the examples show relative URLs. The only place where an example actually shows an absolute path is VideoOutput.
      I would strongly vote for making relative path work again.

        For Gerrit Dashboard: QTBUG-96985
        # Subject Branch Project Status CR V

            piotr Piotr Srebrny (Inactive)
            henning Henning Gründl
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: