Resolve a media file path to an absolute path when calling setMedia

A user provided file path was not resolved to an absolute path, which is
required by gstreamer uridecodebin. This patch resolves any type of file
path to the absolute path. An input URL without schema is treated as
a file path.

Fixes: QTBUG-96985
Pick-to: 6.2.1 6.2
Change-Id: Ibc0ba8b6673e2cc93d428ab19450a0aa44216a9b
Reviewed-by: André de la Rocha <andre.rocha@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>